@@ -1,11 +1,11 @@
 {
-  "count": 42,
+  "count": 43,
   "uniques": 10,
   "clones": [
     {
       "timestamp": "2022-09-18T00:00:00Z",
-      "count": 4,
-      "uniques": 3
+      "count": 3,
+      "uniques": 2
     },
     {
       "timestamp": "2022-09-19T00:00:00Z",
@@ -71,6 +71,11 @@
       "timestamp": "2022-10-01T00:00:00Z",
       "count": 2,
       "uniques": 1
+    },
+    {
+      "timestamp": "2022-10-02T00:00:00Z",
+      "count": 2,
+      "uniques": 2
     }
   ]
 }
