@@ -1,3 +1,11 @@
+2022-10-02T08:26:39Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3167890872
+* notice: last 14d: unq all: 10 43
+* notice: prev accum: outdated-unq outdated-all / unq all: 616 2456 / 641 2498
+* notice: next accum: outdated-unq outdated-all / unq all: 616 2456 / 642 2499
+* notice: prev exec diff / last date diff / accum: unq all: +2 +2 -1 -1 / +2 +2 -0 -0 / 2 2
+* notice: removed / changed dates: [] / [2022-09-18 2022-10-02]
+
 2022-10-02T02:18:43Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3166999426
 * notice: last 14d: unq all: 10 42
